<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">


    <TextView
        android:id="@+id/open_gallery_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/clickable_std"
        android:layout_marginTop="@dimen/padding_std"
        android:layout_marginBottom="@dimen/padding_std"
        android:fontFamily="@font/dosis_medium"
        android:gravity="center"
        android:letterSpacing=".1"
        android:text="@string/open_gallery_txt"
        android:textColor="@android:color/white"
        android:textSize="@dimen/txt_std" />

    <TextView
        android:id="@+id/remove_photo_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/clickable_std"
        android:layout_marginTop="@dimen/padding_std"
        android:layout_marginBottom="@dimen/padding_std"
        android:fontFamily="@font/dosis_medium"
        android:gravity="center"
        android:letterSpacing=".1"
        android:text="@string/remove_photo_txt"
        android:textColor="@color/colorErrors"
        android:textSize="@dimen/txt_std" />


    <TextView
        android:id="@+id/cancel_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/clickable_std"
        android:layout_marginTop="@dimen/padding_std"
        android:layout_marginBottom="@dimen/padding_std"
        android:fontFamily="@font/dosis_medium"
        android:gravity="center"
        android:letterSpacing=".1"
        android:text="@string/cancel_txt"
        android:textColor="@color/colorWhitish"
        android:textSize="@dimen/txt_std" />


</LinearLayout>